--- a/pvp/index.html
+++ b/pvp/index.html
@@ -41,17 +41,21 @@
     .kpi-card .big { font-size:1.25rem; font-weight:700; color:#000; }
     .kpi-card .label { font-size:0.75rem; color:#666; margin-top:0.25rem; }
     .mermaid { background:#fff; border:1px solid #000; padding:3rem; margin:2rem 0; overflow:visible !important; min-height:600px; width:100%; position:relative; }
-    .mermaid.gantt-chart { min-height:800px; padding:4rem 3rem; }
+    .mermaid.gantt-chart { min-height:900px; padding:4rem 3rem; }
     .mermaid > div { overflow:visible !important; }
     .mermaid svg { max-width:none !important; width:100% !important; height:auto !important; min-height:550px; overflow:visible !important; }
-    .mermaid.gantt-chart svg { min-height:700px; }
+    .mermaid.gantt-chart svg { min-height:800px; }
+    .mermaid.gantt-chart text { font-size: 18px !important; }
+    .mermaid.gantt-chart .sectionTitle { font-size: 20px !important; font-weight: 700 !important; }
     .mermaid svg * { overflow:visible !important; }
     .mermaid .nodeLabel { font-size:18px !important; word-wrap:break-word !important; overflow:visible !important; line-height:1.4 !important; white-space:normal !important; text-overflow:clip !important; }
     .mermaid .edgeLabel { font-size:16px !important; word-wrap:break-word !important; overflow:visible !important; line-height:1.4 !important; white-space:normal !important; text-overflow:clip !important; }
     .mermaid .label { overflow:visible !important; font-size:18px !important; word-wrap:break-word !important; white-space:normal !important; }
     .mermaid .node rect, .mermaid .node circle, .mermaid .node ellipse, .mermaid .node polygon { stroke-width: 2.5px; overflow:visible !important; }
     .mermaid .flowchart-label { font-size: 18px !important; overflow:visible !important; word-wrap:break-word !important; }
-    .mermaid .gantt-label { font-size: 18px !important; overflow:visible !important; word-wrap:break-word !important; }
+    .mermaid .gantt-label { font-size: 20px !important; overflow:visible !important; word-wrap:break-word !important; line-height: 1.6 !important; }
+    .mermaid.gantt-chart .gantt-label { font-size: 22px !important; }
+    .mermaid.gantt-chart .section0 .sectionTitle, .mermaid.gantt-chart .section1 .sectionTitle, .mermaid.gantt-chart .section2 .sectionTitle, .mermaid.gantt-chart .section3 .sectionTitle { font-size: 20px !important; font-weight: 700 !important; }
     .mermaid text { font-size: 18px !important; overflow:visible !important; }
     .mermaid .titleText { font-size: 20px !important; font-weight: bold; overflow:visible !important; }
     .mermaid tspan { overflow:visible !important; }
@@ -1786,12 +1790,14 @@ Industry:
       gantt: {
         useMaxWidth: false,
         wrap: true,
-        leftPadding: 250,
-        gridLineStartPadding: 30,
-        fontSize: 16,
-        bottomPadding: 100,
-        topPadding: 60,
-        rightPadding: 40
+        leftPadding: 280,
+        gridLineStartPadding: 35,
+        fontSize: 18,
+        bottomPadding: 120,
+        topPadding: 70,
+        rightPadding: 50,
+        numberSectionStyles: 4,
+        axisFormat: '%Y-%m'
       },
       securityLevel: 'loose',
       fontFamily: 'inherit',
