--- a/pvp/index.html
+++ b/pvp/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Predica Case Study — Solana Prediction Markets Platform</title>
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
@@ -43,7 +43,7 @@
     .mermaid { background:#fff; border:1px solid #000; padding:3rem; margin:2rem 0; overflow:visible !important; min-height:600px; width:100%; position:relative; }
     .mermaid.gantt-chart { min-height:900px; padding:4rem 3rem; }
     .mermaid > div { overflow:visible !important; }
-    .mermaid svg { max-width:none !important; width:100% !important; height:auto !important; min-height:550px; overflow:visible !important; }
+    .mermaid svg { max-width:100% !important; width:100% !important; height:auto !important; min-height:550px; overflow:visible !important; }
     .mermaid.gantt-chart svg { min-height:800px; }
     .mermaid.gantt-chart text { font-size: 18px !important; }
     .mermaid.gantt-chart .sectionTitle { font-size: 20px !important; font-weight: 700 !important; }
@@ -92,8 +92,10 @@
       .two-col, .three-col{ grid-template-columns:1fr; gap:0.85rem;} 
       .kpi-grid, .metrics-grid{ grid-template-columns:1fr; } 
       .before-after{ grid-template-columns:1fr; }
-      .mermaid { min-height:400px; padding:1.5rem; }
-      .mermaid svg { min-height:350px; }
+      .mermaid { min-height:400px; padding:1rem; max-width: 100vw; overflow-x: auto; box-sizing: border-box; }
+      .mermaid svg { min-height:350px; max-width: 100% !important; width: 100% !important; height: auto !important; }
+      .mermaid.gantt-chart { min-height: 600px; padding: 1.5rem 1rem; }
+      .mermaid.gantt-chart svg { min-height: 550px; max-width: 100% !important; width: 100% !important; }
       .mermaid .nodeLabel, .mermaid .edgeLabel, .mermaid .label, .mermaid text { font-size:14px !important; }
     }
     .password-protection { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #000; display: flex; justify-content: center; align-items: center; z-index: 9999; }
