--- a/nubcat/slide-a1.html
+++ b/nubcat/slide-a1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=1440">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PVP x Nubcat - A1</title>
   <link rel="stylesheet" href="styles.css">
 </head>
