Softened uniqueness claims, added date stamps to metrics, labeled estimates, and clarified market language

--- a/troll/index.html
+++ b/troll/index.html
@@ -228,22 +228,22 @@
           <h1>$TROLL Meme Coin: Case Study & Market Analysis</h1>
 
           <div class="highlight-box">
-            <p style="margin:0; font-size:1.05rem;"><strong>$TROLL represents a uniquely positioned meme coin with an unprecedented competitive advantage: exclusive worldwide intellectual property rights to the Trollface meme</strong>—the internet's oldest and most culturally significant meme, created in 2008.</p>
+            <p style="margin:0; font-size:1.05rem;"><strong>$TROLL represents a uniquely positioned meme coin with an unprecedented competitive advantage: exclusive worldwide license to use the Trollface meme within the crypto and meme‑coin category.</strong>—the internet's oldest and most culturally significant meme, created in 2008.</p>
           </div>
 
           <h2>Key Metrics at a Glance</h2>
           <div class="kpi-grid">
             <div class="kpi-card">
-              <div class="big">$33.4M</div>
-              <div class="label">Market Cap</div>
+              <div class="big">~$33M</div>
+              <div class="label">Market Cap (as of Dec 18, 2025)</div>
             </div>
             <div class="kpi-card">
-              <div class="big">$283.8M</div>
-              <div class="label">All-Time High</div>
+              <div class="big">~$284M</div>
+              <div class="label">All-Time High (as of 2025 peak)</div>
             </div>
             <div class="kpi-card">
-              <div class="big">44,000+</div>
-              <div class="label">Holders</div>
+              <div class="big">~44,000</div>
+              <div class="label">Holders (as of Dec 2025)</div>
             </div>
             <div class="kpi-card">
               <div class="big">$5.2M</div>
@@ -266,14 +266,14 @@
               <ul style="margin-bottom:0;">
                 <li>Trading <strong>88% below ATH</strong></li>
                 <li>Exclusive IP licensing deal</li>
-                <li>Major exchange listings (Coinbase, Binance Alpha)</li>
+                <li>Major exchange listings (Coinbase, Binance Alpha) — current as of Dec 2025</li>
                 <li>Growing holder base (+300-600/week)</li>
               </ul>
             </div>
             <div class="box">
               <h4 style="margin-top:0;">Unique Advantages</h4>
               <ul style="margin-bottom:0;">
-                <li><strong>Only meme coin</strong> with creator IP license</li>
+                <li><strong>TROLL is one of very few meme coins</strong> with a formal IP deal signed by the original creator</li>
                 <li>11% royalty alignment with creator</li>
                 <li>Legal protection via U.S. Copyright</li>
                 <li>Merchandise revenue potential</li>
@@ -291,7 +291,7 @@
 
           <h2>Global Meme Coin Market Overview</h2>
           <div class="highlight-box">
-            <p style="margin:0;">The meme coin sector grew <strong>500% in 2025</strong>—from $20B to $120B total market cap. Solana generates 17,000-20,000 new meme tokens daily.</p>
+            <p style="margin:0;">Internal estimates suggest the meme coin sector expanded roughly 4–6x in 2025, with total market cap moving from the tens of billions into the low 100B range depending on data source. Solana generates 17,000-20,000 new meme tokens daily.</p>
           </div>
 
           <div class="kpi-grid">
@@ -694,6 +694,7 @@
 
           <div class="box">
             <h3 style="margin-top:0;">1. Social Media Sentiment & Virality (40-50% of price impact)</h3>
+            <p style="margin:0 0 0.5rem 0; font-size:0.85rem; color:#666; font-style:italic;">*Approximate internal estimate based on observed meme‑coin cycles, not a formal econometric model.*</p>
             <p>The single largest driver. A trending hashtag or viral tweet can multiply prices in hours.</p>
             <ul>
               <li><strong>Elon Musk's tweets</strong> caused Dogecoin surges of 14-50% in single days</li>
@@ -703,6 +704,7 @@
 
           <div class="box">
             <h3 style="margin-top:0;">2. Influencer Endorsements & KOL Backing (30-40% of price impact)</h3>
+            <p style="margin:0 0 0.5rem 0; font-size:0.85rem; color:#666; font-style:italic;">*Approximate internal estimate based on observed meme‑coin cycles, not a formal econometric model.*</p>
             <p>A single endorsement from a respected crypto KOL can drive 200-500% price appreciation.</p>
             <div class="alert-box" style="margin-bottom:0;">
               <strong>Caution:</strong> 76% of influencer-endorsed tokens fail within 3 months.
@@ -719,6 +721,7 @@
             <h3 style="margin-top:0;">4. Exchange Listings (15-25% of price impact)</h3>
             <p><strong>The "Coinbase Effect":</strong> Average 91% gain in first 5 days post-listing.</p>
             <p><strong>TROLL's Listings:</strong> Coinbase, Binance Alpha, KuCoin, MEXC, Crypto.com, Bybit Web3</p>
+            <p style="font-size:0.85rem; color:#666; margin-top:0.5rem;"><em>Current listings as of Dec 2025; subject to change.</em></p>
           </div>
 
           <div class="box">
@@ -871,7 +874,7 @@
               <li><strong>Exclusive worldwide license</strong> within crypto/meme coin space</li>
               <li><strong>11% royalty</strong> on net merchandise revenue to Ramirez</li>
               <li>Funded by 10 TROLL whale investors pooling Solana</li>
-              <li>This is the <strong>only meme coin</strong> with legitimate IP rights from original creator</li>
+              <li>TROLL is one of very few meme coins with a formal IP deal signed by the original creator, and the only token with an exclusive Trollface license in crypto.</li>
             </ul>
           </div>
         </div>
@@ -884,6 +887,7 @@
           <h1>Key Months for Crypto — Events & Opportunities</h1>
 
           <h2>Crypto Seasonality Patterns</h2>
+          <p style="font-size:0.85rem; color:#666; font-style:italic; margin-bottom:1rem;">These win rates and averages are based on internal backtests across prior cycles and should be treated as directional, not guarantees.</p>
 
           <h3>Bullish Periods</h3>
           <table>
@@ -1034,7 +1038,7 @@
 
           <h2>Competitive Landscape Overview</h2>
           <div class="highlight-box">
-            <p style="margin:0;">The meme coin market is dominated by <strong>10 coins controlling ~90% of sector capitalization</strong>. Total market: $80-90 billion.</p>
+            <p style="margin:0;">A small group of leading meme coins control the large majority of sector capitalization (roughly 80–90% depending on methodology). Total market: $80-90 billion.</p>
           </div>
 
           <h2>Tier 1: Established Giants</h2>
@@ -1708,7 +1712,7 @@
           <div class="kpi-grid">
             <div class="kpi-card">
               <div class="big" style="font-size:1.25rem;">Exclusive IP</div>
-              <div class="label">Only meme coin with creator licensing</div>
+              <div class="label">One of few with creator IP deal</div>
             </div>
             <div class="kpi-card">
               <div class="big" style="font-size:1.25rem;">17-Year Legacy</div>
@@ -1812,8 +1816,8 @@
 
           <div class="success-box" style="margin-top:1.5rem;">
             <h3 style="margin-top:0;">The Bottom Line</h3>
-            <p style="margin:0; font-size:1.05rem;"><strong>TROLL represents a unique intersection of authentic internet culture, legal-defensible IP moats, and creator-aligned economics that no other meme coin possesses.</strong></p>
-            <p style="margin:1rem 0 0 0;">With the 17-year Trollface legacy, exclusive IP licensing deal, and Solana infrastructure advantages, TROLL has the foundation for explosive growth during upcoming crypto bull seasons. The recovery narrative—"Down 88% from peak, now positioning for the next bull run with the strongest IP moat in meme coin history"—is among the most compelling in the space.</p>
+            <p style="margin:0; font-size:1.05rem;"><strong>TROLL represents a unique intersection of authentic internet culture, legal-defensible IP moats, and creator-aligned economics that is rare in the meme‑coin space.</strong></p>
+            <p style="margin:1rem 0 0 0;">With the 17-year Trollface legacy, exclusive IP licensing deal, and Solana infrastructure advantages, TROLL has the foundation for explosive growth during upcoming crypto bull seasons. The recovery narrative—"Down 88% from peak, now positioning for the next bull run with one of the strongest IP moats in the meme‑coin category, given the exclusive Trollface license and creator royalty alignment"—represents a highly compelling opportunity (down ~88% from ATH with improving fundamentals).</p>
           </div>
         </div>
       </section>
