Update Kevin Rosa campaign date from November 2025 to April-June 2026

--- a/troll/index.html
+++ b/troll/index.html
@@ -1506,7 +1506,7 @@
           </div>
 
           <h2>10.4 Kevin Rosa Guerrilla Marketing Activation</h2>
-          <p>November 2025 campaign designed <strong>specifically for our audience's psychology</strong>:</p>
+          <p>April-June 2026 campaign designed <strong>specifically for our audience's psychology</strong>:</p>
 
           <h3>Concept References</h3>
           <div class="image-gallery large">
