Update branding from Go To War Strategy to Orbit Collaborative in Aerial Activation Program

--- a/aerial/index.html
+++ b/aerial/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aerial Activation Program — Drone Experiential Marketing for Fashion & Culture</title>
+  <title>Aerial Activation Program — Drone Experiential Marketing for Fashion & Culture | Orbit Collaborative</title>
   <style>
     :root { --index-width: 280px; --content-max: 58rem; --border:#000; --accent:#000; }
     * { box-sizing: border-box; }
@@ -167,7 +167,7 @@
   <div class="menu-backdrop" id="menuBackdrop"></div>
   <div class="wrapper">
     <aside class="index" id="indexNav">
-      <div class="index-logo">GTW</div>
+      <div class="index-logo">ORBIT</div>
       <div class="index-title">Aerial Activation Program</div>
       <ol>
         <li><a href="#s0"><span class="num">00.</span> Executive Summary</a></li>
@@ -179,6 +179,7 @@
         <li><a href="#s6"><span class="num">06.</span> Partnership Vision</a></li>
       </ol>
       <div style="margin-top:2rem; padding-top:1rem; border-top:1px solid #ddd; font-size:0.75rem; color:#999;">
+        Orbit Collaborative<br>
         Prepared for DJI<br>
         January 2026
       </div>
@@ -193,7 +194,7 @@
           <h1>Aerial Activation Program: Drone Experiential Marketing for Fashion & Culture</h1>
 
           <div class="highlight-box">
-            <p style="margin:0; font-size:1.05rem;"><strong>Go To War Strategy is building an in-house drone activation capability to offer experiential marketing services for fashion, music, and culture-driven brands.</strong> This program positions GTW as the first North American agency specializing in aerial brand activations for the streetwear and luxury fashion verticals.</p>
+            <p style="margin:0; font-size:1.05rem;"><strong>Orbit Collaborative is building an in-house drone activation capability to offer experiential marketing services for fashion, music, and culture-driven brands.</strong> This program positions Orbit Collaborative as the first North American agency specializing in aerial brand activations for the streetwear and luxury fashion verticals.</p>
           </div>
 
           <h2>Key Value Propositions</h2>
@@ -228,7 +229,7 @@
               </ul>
             </div>
             <div class="box">
-              <h4 style="margin-top:0;">GTW Opportunity</h4>
+              <h4 style="margin-top:0;">Orbit Collaborative Opportunity</h4>
               <ul style="margin-bottom:0;">
                 <li><strong>No North American agency</strong> specializes in fashion drone activations</li>
                 <li>Direct access to premium fashion and culture brands</li>
@@ -262,7 +263,7 @@
           <h1>Who We Are</h1>
 
           <div class="highlight-box">
-            <p style="margin:0;">Go To War Strategy (GTW) is a Montreal-based growth consultancy specializing in performance marketing and experiential activations for fashion, music, and culture-driven brands.</p>
+            <p style="margin:0;">Orbit Collaborative is a Montreal-based growth consultancy specializing in performance marketing and experiential activations for fashion, music, and culture-driven brands.</p>
           </div>
 
           <h2>Our Foundation</h2>
@@ -321,7 +322,7 @@
             <p style="margin:0;">The space is dominated by <strong>municipal fireworks replacements</strong> and <strong>sports venue entertainment</strong>. Fashion and culture brands need specialized agencies that understand their aesthetic, audience, and objectives.</p>
           </div>
 
-          <h2>GTW's Position</h2>
+          <h2>Orbit Collaborative's Position</h2>
           <p>We are building the capability to offer aerial brand activations as a core service — designed to execute intimate, high-impact activations that translate to:</p>
 
           <div class="kpi-grid">
@@ -575,12 +576,12 @@
 
           <div class="success-box" style="margin-top:2rem;">
             <h3 style="margin-top:0;">The Opportunity</h3>
-            <p style="margin:0;">We look forward to visiting your factory and discussing how GTW can become a valued customer and advocate for DJI in the fashion and culture industry.</p>
+            <p style="margin:0;">We look forward to visiting your factory and discussing how Orbit Collaborative can become a valued customer and advocate for DJI in the fashion and culture industry.</p>
           </div>
 
           <div style="margin-top:2rem; padding-top:1rem; border-top:1px solid #ddd; text-align:center;">
-            <p style="margin:0; font-weight:600;">GO TO WAR STRATEGY INC.</p>
-            <p style="margin:0.5rem 0 0 0; color:#666;">Montreal, Canada | gotowarstrategy.com</p>
+            <p style="margin:0; font-weight:600;">ORBIT COLLABORATIVE</p>
+            <p style="margin:0.5rem 0 0 0; color:#666;">Montreal, Canada</p>
           </div>
         </div>
       </section>
